Optimize count pipelines, fix #34